# radiant-rag

./: .gitignore  AGENTS.md  CHANGES_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS_IMPLEMENTED.md  POST_OPTIMIZATION_ANALYSIS.md  README.md  config.yaml  config_quantization_example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: AGENTS_MD_EXAMPLE_WALKTHROUGH.md  AGENTS_MD_USAGE.md  AGENTS_MD_VALIDATION_REPORT.md  AGENT_ARCHITECTURE.md  BINARY_QUANTIZATION_README.md  CHANGES_ORCHESTRATOR_UPDATE.md  NEW_CORPUS_GUIDE.md  USER_MANUAL.md  radiant_rag_executive_summary.html  radiant_rag_executive_summary.md  radiant_rag_query_processing_pipeline.html  view_html_pages
radiant/: __init__.py  __main__.py  app.py  cli.py  config.py  orchestrator.py
radiant/agents/: __init__.py  agent_template.py  automerge.py  base.py  base_agent.py  bm25.py  chunking.py  citation.py  context_eval.py  critic.py  decomposition.py  dense.py  expansion.py  fact_verification.py  fusion.py  language_detection.py  multihop.py  planning.py  rerank.py  rewrite.py  strategy_memory.py  summarization.py  synthesis.py  tools.py  translation.py  web_search.py
radiant/agents/gdelt/: __init__.py  client.py  config.py  download_agent.py  graph_agent.py  models.py  timeline_agent.py
radiant/ingestion/: __init__.py  code_chunker.py  github_crawler.py  image_captioner.py  processor.py  web_crawler.py
radiant/llm/: __init__.py  client.py  local_models.py
radiant/llm/backends/: __init__.py  embedding_backends.py  factory.py  llm_backends.py  reranking_backends.py
radiant/storage/: __init__.py  base.py  bm25_index.py  chroma_store.py  factory.py  pgvector_store.py  redis_store.py
radiant/ui/: __init__.py  display.py  tui.py
radiant/ui/reports/: __init__.py  report.py  text.py
radiant/utils/: __init__.py  cache.py  conversation.py  metrics_export.py
templates/: agent_template.py
tests/: test_all.py  test_base_agent_lifecycle.py
tools/: calibrate_int8_ranges.py  check_redis.py  inspect_index.py  validate_bugfix.py  validate_quantization.py
